syntax = "proto3";

option java_package = "org.iu.engrcloudcomputing.mapreduce.hadoop.autogenerated";

service MapperAck {
    rpc mappedKeys(Keys) returns (Message);
}

service ReducerAck {
    rpc reduceKeys(Keys) returns (Message);
}

service BeginMapReduce {
    rpc mapReduce(MapReduceParams) returns (MapReduceResponse);
}

service ShutDownMaster {
    rpc shutDown(Empty) returns (Message);
}

message Keys {
    repeated string key = 1;
}

message Message {
    int32 responseCode = 1;
    string responseMessage = 2;
}

message MapReduceParams {
    int32 mappers = 1;
    int32 reducers = 2;
    string mapperJar = 3;
    string reducerJar = 4;
    string initialKey = 5;
    string kvStoreIpAddress = 6;
    int32 kvStorePort = 7;
    string masterIpAddress = 8;
    int32 masterPort = 9;
}

message MapReduceResponse {
    Keys keys = 1;
    Message message = 2;
}

message Empty {

}